local/resource/basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: another-basic-ingress
  namespace: default
  annotations:
    testing: another
spec:
  ingressClassName: cilium
  defaultBackend:
    service:
      name: ratings
      port:
        number: 9080
  rules:
    - http:
        paths:
          - backend:
              service:
                name: reviews
                port:
                  number: 9080
            path: /reviews
            pathType: Exact
